@@ -10,6 +10,8 @@ cdebconf-entropy (0.7) UNRELEASED; urgency=low
     "SUCCESS" variable.
   * Strings only relevant to the newt entropy plugin are now in templates
     shipped with cdebconf-newt-entropy.
+  * The newt plugin now properly handle the "backup" capability: the "Go Back"
+    button was previously always available.
 
  -- Jérémy Bobbio <lunar@debian.org>  Sun, 23 Mar 2008 20:28:57 +0100
 
